# tool_ParameterEstimator

./: README.md  pyproject.toml  setup.py
AnalysisTool/: analysisTool.py  requirements.txt
Examples/example_convection/: .gitignore  Room_Door.ugx  evaluate.lua  experiment.py
Examples/example_free_surface/: .gitignore  evaluate.lua  experiment.py  plot.plt  testbox-triangles-reoriented.ugx
Tests/UGParameterEstimator/: test_freeSurfaceEvaluation.py  test_genericEvaluation.py
src/UGParameterEstimator/: __init__.py  setup_logger.py
src/UGParameterEstimator/evaluationinput/: evaluation.py  generic_evaluation.py
src/UGParameterEstimator/evaluators/: clusterEvaluator.py  evaluator.py  localEvaluator.py
src/UGParameterEstimator/linesearches/: lineSearches.py
src/UGParameterEstimator/optimizers/: __init__.py  bayesOptimizer.py  gainedLevMarOptimizer.py  gaussNewtonOptimizer.py  optimizer.py  scipyOptimizers.py
src/UGParameterEstimator/parametermanagement/: __init__.py  keyValueFileParameterOutputAdapter.py
src/dataanalysis/: result.py
src/evaluationinput/: __init__.py  freesurface_evaluation.py  generic_evaluation.py
src/evaluators/: __init__.py  clusterEvaluator.py  evaluator.py
src/linesearches/: __init__.py  lineSearches.py
src/optimizers/: gaussNewtonOptimizer.py  gradDescOptimizer.py  levMarOptimizer.py  mmaOptimizer.py  optimizer.py
src/parametermanagement/: UG4ParameterOutputAdapter.py  parameterManager.py  parameterOutputAdapter.py
