[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "UGParameterEstimator"
authors = [
    {name = "Tim Schön"},
    {name = "Moritz Kowalski"}
]
description = "A package for parameter estimation in UG4"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "scikit-optimize"
]

[project.optional-dependencies]
analysisTool = [
    "numpy",
    "scipy",
    "scikit-optimize",
    "matplotlib",
    "PyQt5",
    "pyqtgraph"
]
